--- a/ClientA/index.html
+++ b/ClientA/index.html
@@ -31,7 +31,8 @@
         <button id="sendmessagetoB"">send</button>
     </div>
     <p id="messages"></p>
-    <script src="clientA.js"></script>
+    <!-- <script src="clientA.js"></script> -->
+    <script src="mainA.js"></script>
     <!-- <script src="clientB.js"></script> -->
 </body>
 </html>
