--- a/ClientB/index.html
+++ b/ClientB/index.html
@@ -27,7 +27,8 @@
    </div>
 
 <p id="messages"></p>
-    <script src=" clientB.js"></script>
+    <!-- <script src=" clientB.js"></script> -->
+    <script src="mainB.js"></script>
 </body>
 
 </html>
